--- a/applications/appx_packages_base.json
+++ b/applications/appx_packages_base.json
@@ -1,6 +1,4 @@
 [
-    "4DF9E0F8.Netflix",
-    "5A894077.McAfeeSecurity",
     "7EE7776C.LinkedInforWindows",
     "AD2F1837.HPJumpStart",
     "AD2F1837.HPPCHardwareDiagnosticsWindows",
@@ -23,9 +21,10 @@
     "Microsoft.SkypeApp",
     "Microsoft.Wallet",
     "Microsoft.WindowsAlarms",
-    "Microsoft.WindowsCamera",
+    "microsoft.windowscommunicationsapps",
     "Microsoft.WindowsFeedbackHub",
     "Microsoft.WindowsMaps",
+    "Microsoft.WindowsSoundRecorder",
     "Microsoft.Xbox.TCUI",
     "Microsoft.XboxApp",
     "Microsoft.XboxGameOverlay",
@@ -33,8 +32,5 @@
     "Microsoft.XboxIdentityProvider",
     "Microsoft.XboxSpeechToTextOverlay",
     "Microsoft.YourPhone",
-    "Microsoft.ZuneMusic",
-    "Microsoft.ZuneVideo",
-    "RealtekSemiconductorCorp.HPAudioControl",
-    "SynapticsIncorporated.SynHPConsumerDApp"
+    "RealtekSemiconductorCorp.HPAudioControl"
 ]
