--- a/applications/appx_provisioned_packages_base.json
+++ b/applications/appx_provisioned_packages_base.json
@@ -18,9 +18,10 @@
     "Microsoft.SkypeApp_15.83.408.0_neutral_~_kzf8qxf38zg5c",
     "Microsoft.Wallet_2.4.18324.0_neutral_~_8wekyb3d8bbwe",
     "Microsoft.WindowsAlarms_2021.2101.28.0_neutral_~_8wekyb3d8bbwe",
-    "Microsoft.WindowsCamera_2021.105.10.0_neutral_~_8wekyb3d8bbwe",
+    "microsoft.windowscommunicationsapps_16005.11629.20316.0_neutral_~_8wekyb3d8bbwe",
     "Microsoft.WindowsFeedbackHub_2022.317.2207.0_neutral_~_8wekyb3d8bbwe",
     "Microsoft.WindowsMaps_2021.2104.2.0_neutral_~_8wekyb3d8bbwe",
+    "Microsoft.WindowsSoundRecorder_2021.2103.28.0_neutral_~_8wekyb3d8bbwe",
     "Microsoft.Xbox.TCUI_1.24.10001.0_neutral_~_8wekyb3d8bbwe",
     "Microsoft.XboxApp_48.88.11001.0_neutral_~_8wekyb3d8bbwe",
     "Microsoft.XboxGameOverlay_1.54.4001.0_neutral_~_8wekyb3d8bbwe",
@@ -30,6 +31,5 @@
     "Microsoft.YourPhone_1.22032.179.0_neutral_~_8wekyb3d8bbwe",
     "Microsoft.ZuneMusic_2019.19071.19011.0_neutral_~_8wekyb3d8bbwe",
     "Microsoft.ZuneVideo_2019.22031.10071.0_neutral_~_8wekyb3d8bbwe",
-    "RealtekSemiconductorCorp.HPAudioControl_1.1.134.0_neutral_~_dt26b99r8h8gj",
-    "SynapticsIncorporated.SynHPConsumerDApp_19005.35054.0.0_x64__807d65c4rvak2"
+    "RealtekSemiconductorCorp.HPAudioControl_1.1.134.0_neutral_~_dt26b99r8h8gj"
 ]
