--- a/applications/appx_packages_base.json
+++ b/applications/appx_packages_base.json
@@ -1,36 +1,48 @@
 [
-    "7EE7776C.LinkedInforWindows",
-    "AD2F1837.HPJumpStart",
-    "AD2F1837.HPPCHardwareDiagnosticsWindows",
-    "AD2F1837.HPPrivacySettings",
-    "C27EB4BA.DropboxOEM",
-    "Microsoft.549981C3F5F10",
-    "Microsoft.BingWeather",
-    "Microsoft.GetHelp",
-    "Microsoft.Getstarted",
-    "Microsoft.Messaging",
-    "Microsoft.Microsoft3DViewer",
-    "Microsoft.MicrosoftOfficeHub",
-    "Microsoft.MicrosoftSolitaireCollection",
-    "Microsoft.MicrosoftStickyNotes",
-    "Microsoft.MixedReality.Portal",
-    "Microsoft.OneConnect",
-    "Microsoft.People",
-    "Microsoft.Print3D",
-    "Microsoft.ScreenSketch",
-    "Microsoft.SkypeApp",
-    "Microsoft.Wallet",
-    "Microsoft.WindowsAlarms",
-    "microsoft.windowscommunicationsapps",
-    "Microsoft.WindowsFeedbackHub",
-    "Microsoft.WindowsMaps",
-    "Microsoft.WindowsSoundRecorder",
-    "Microsoft.Xbox.TCUI",
-    "Microsoft.XboxApp",
-    "Microsoft.XboxGameOverlay",
-    "Microsoft.XboxGamingOverlay",
-    "Microsoft.XboxIdentityProvider",
-    "Microsoft.XboxSpeechToTextOverlay",
-    "Microsoft.YourPhone",
-    "RealtekSemiconductorCorp.HPAudioControl"
+  "Disney.37853FC22B2CE",
+  "7EE7776C.LinkedInforWindows",
+  "AD2F1837.HPJumpStart",
+  "AD2F1837.HPPCHardwareDiagnosticsWindows",
+  "AD2F1837.HPPrivacySettings",
+  "C27EB4BA.DropboxOEM",
+  "Microsoft.549981C3F5F10",
+  "Microsoft.BingNews",
+  "Microsoft.BingWeather",
+  "Microsoft.GetHelp",
+  "Microsoft.Getstarted",
+  "Microsoft.Messaging",
+  "Microsoft.Microsoft3DViewer",
+  "Microsoft.MicrosoftOfficeHub",
+  "Microsoft.MicrosoftSolitaireCollection",
+  "Microsoft.MicrosoftStickyNotes",
+  "Microsoft.MixedReality.Portal",
+  "Microsoft.OneConnect",
+  "Microsoft.People",
+  "Microsoft.Print3D",
+  "Microsoft.ScreenSketch",
+  "Microsoft.SkypeApp",
+  "Microsoft.Wallet",
+  "Microsoft.OneDriveSync",
+  "Microsoft.People",
+  "Microsoft.PowerAutomateDesktop",
+  "Microsoft.WindowsAlarms",
+  "microsoft.windowscommunicationsapps",
+  "Microsoft.WindowsFeedbackHub",
+  "Microsoft.WindowsMaps",
+  "Microsoft.WindowsSoundRecorder",
+  "Microsoft.WindowsCamera",
+  "microsoft.windowscommunicationsapps",
+  "Microsoft.Xbox.TCUI",
+  "Microsoft.XboxApp",
+  "Microsoft.XboxGameOverlay",
+  "Microsoft.XboxGamingOverlay",
+  "Microsoft.XboxIdentityProvider",
+  "Microsoft.XboxSpeechToTextOverlay",
+  "Microsoft.YourPhone",
+  "Microsoft.WindowsFeedbackHub",
+  "Microsoft.ZuneMusic",
+  "Microsoft.ZuneVideo",
+  "MicrosoftTeams",
+  "SpotifyAB.SpotifyMusic",
+  "RealtekSemiconductorCorp.HPAudioControl"
 ]
