--- a/scripts/applications/appx_packages_base.json
+++ b/scripts/applications/appx_packages_base.json
@@ -1,10 +1,11 @@
 [
-  "Disney.37853FC22B2CE",
+  "4DF9E0F8.Netflix",
   "7EE7776C.LinkedInforWindows",
   "AD2F1837.HPJumpStart",
   "AD2F1837.HPPCHardwareDiagnosticsWindows",
   "AD2F1837.HPPrivacySettings",
   "C27EB4BA.DropboxOEM",
+  "Disney.37853FC22B2CE",
   "Microsoft.549981C3F5F10",
   "Microsoft.BingNews",
   "Microsoft.BingWeather",
@@ -17,21 +18,19 @@
   "Microsoft.MicrosoftStickyNotes",
   "Microsoft.MixedReality.Portal",
   "Microsoft.OneConnect",
+  "Microsoft.OneDriveSync",
   "Microsoft.People",
+  "Microsoft.PowerAutomateDesktop",
   "Microsoft.Print3D",
   "Microsoft.ScreenSketch",
   "Microsoft.SkypeApp",
   "Microsoft.Wallet",
-  "Microsoft.OneDriveSync",
-  "Microsoft.People",
-  "Microsoft.PowerAutomateDesktop",
   "Microsoft.WindowsAlarms",
+  "Microsoft.WindowsCamera",
   "microsoft.windowscommunicationsapps",
   "Microsoft.WindowsFeedbackHub",
   "Microsoft.WindowsMaps",
   "Microsoft.WindowsSoundRecorder",
-  "Microsoft.WindowsCamera",
-  "microsoft.windowscommunicationsapps",
   "Microsoft.Xbox.TCUI",
   "Microsoft.XboxApp",
   "Microsoft.XboxGameOverlay",
@@ -39,10 +38,9 @@
   "Microsoft.XboxIdentityProvider",
   "Microsoft.XboxSpeechToTextOverlay",
   "Microsoft.YourPhone",
-  "Microsoft.WindowsFeedbackHub",
   "Microsoft.ZuneMusic",
   "Microsoft.ZuneVideo",
   "MicrosoftTeams",
-  "SpotifyAB.SpotifyMusic",
-  "RealtekSemiconductorCorp.HPAudioControl"
+  "RealtekSemiconductorCorp.HPAudioControl",
+  "SpotifyAB.SpotifyMusic"
 ]
